# rp2040-3rd-stage-bootloader

./: .gitignore  readme.md
app_build/: build.py  build_config.json
bootloader/: CMakeLists.txt  pico_extras_import.cmake  public_key.h  readme.md
bootloader/headers/: bootloader.h  crc32.h  crypto.h  debug.h  defines.h  eeprom_emulation.h  eeprom_hardware.h  log.h  storage.h  time.h
bootloader/src/: crc32.c  crypto.c  debug.c  eeprom_emulation.c  eeprom_hardware.c  log.c  main.c  storage.c  time.c
